--- a/app/views/login.pug
+++ b/app/views/login.pug
@@ -6,8 +6,8 @@ block content
         if error
             .alert.alert-danger #{error.message}
         block authForm
-            label(for=inputEmail) Email address
-            input#inputEmail.form-control(name='email' type='email' placeholder='example@gmail.com' required autofocus)
-            label(for=inputPassword) Password
-            input#inputPassword.form-control(name='password' type='password' placeholder='Your secret pass' required)
-            button.btn.btn-lg.btn-primary.btn-block(type=submit) Sign In
+            label(for=loginEmail) Email address
+            input#loginEmail.form-control(name='email' type='email' placeholder='example@gmail.com' required autofocus)
+            label(for=loginPassword) Password
+            input#loginPassword.form-control(name='password' type='password' placeholder='Your secret pass' required)
+            button#loginSubmit.btn.btn-lg.btn-primary.btn-block(type=submit) Sign In
