--- a/app/views/wallets.pug
+++ b/app/views/wallets.pug
@@ -14,7 +14,7 @@ block content
                             ul.list-group.list-group-flush
                                 li.list-group-item.text-right Balance:
                                     span.badge.badge-info.ml-2   #{wallet.balance} $
-                        a.btn.btn-outline-info.mr-4(href="/wallets/" + wallet._id) Details
+                        a.btn.btn-outline-info.mr-4(href="/wallets/" + wallet.name) Details
                         //a.btn.btn-outline-warning.mr-2(href="#") Edit
                         a.btn.btn-outline-danger(href="#") Delete
 
