phantom in Dockerfile

--- a/app/views/new-transaction.pug
+++ b/app/views/new-transaction.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1.display-4 New Transaction
+    h1.display-4 #{title}
     .row
         .col-5
             hr
