--- a/app/public/styles/styles.css
+++ b/app/public/styles/styles.css
@@ -4,6 +4,11 @@ body {
     padding-bottom: 1.5rem;
 }
 
+.page-title {
+    text-align: right;
+    font-size: 3.5em;
+    margin-right: 3.5em;
+}
 
 /*!* Everything but the jumbotron gets side spacing for mobile first views *!*/
 /*.header,*/
