--- a/app/views/wallet.pug
+++ b/app/views/wallet.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1.display-4 #{wallet.name} :
+    h1.display-4 #{title} : #{wallet.name} :
         small#walletBallance.text-muted  #{wallet.balance} $
     hr
     .row
